<resources>
    <string name="app_id">APlaceForPaws</string>
    <string name="app_name">A place for paws</string>
    <string name="imageDescription">This is the App logo</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="visitor">Visitor</string>
    <string name="welcome_text">Welcome to</string>
    <string name="underline">----------------------</string>
    <string name="loginText">Log in</string>
    <string name="registerText">Register</string>
    <string name="backButton">❮</string>
    <string name="email">email</string>
    <string name="name">name</string>
    <string name="password">password</string>
    <string name="phone">phone number</string>
    <string name="todo">TODO</string>
    <string name="browse">Browse</string>
    <string name="newAd">New Ad</string>
    <string name="myAds">My Ads</string>
    <string name="logout">Log out</string>
    <string name="filters">Filter…</string>
    <string name="browsePetsTitle">Pets</string>
    <string name="petName">pet name</string>
    <string name="petAge">pet age</string>
    <string name="petDescription">pet description</string>
    <string name="addPicture">+ picture</string>
    <string name="done">done</string>
    <string name="more">more</string>
    <string name="addingPicture">adding picture</string>
    <string name="seeAd">See ad</string>
    <string name="delete">Delete</string>
    <string name="search">search</string>
    <string name="filter">filter</string>
    <string name="filter_by">Filter by</string>
    <string name="sort_by">sort by</string>
    <string name="age">Age:</string>
    <string-array name="sort_types">
        <item>sort all by:</item>
        <item>Pet Name</item>
        <item>Pet Age</item>
    </string-array>
    <string-array name="pet_types">
        <item>pet type:</item>
        <item>Cat</item>
        <item>Dog</item>
        <item>Fish</item>
        <item>Parrot</item>
        <item>Hedgehog</item>
    </string-array>
    <string name="interested">Interested</string>
    <string name="comma">,</string>
    <string name="location">location</string>
    <string-array name="filter_location">
        <item>location filter:</item>
        <item>On</item>
        <item>Off</item>
    </string-array>
    <string name="contact">Contact: </string>

</resources>