<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newAdBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue">

    <TextView
        android:id="@+id/newAdTitle"
        android:layout_width="250dp"
        android:layout_height="106dp"
        android:fontFamily="@font/hang"
        android:text="@string/newAd"
        android:textAlignment="center"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <Button
        android:id="@+id/newAdBackButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/peach"
        android:text="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newAdPetName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/petName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/addImage"
        android:layout_width="137dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/greyblue"
        android:text="@string/addPicture"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newAdPetDescription"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/petDescription"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <EditText
        android:id="@+id/newAdPetAge"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/petAge"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/petTypeChoiceBox"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center|fill"
        android:hint="@string/petName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/done"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/peach"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/petImg"
        android:layout_width="84dp"
        android:layout_height="91dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822"
        android:contentDescription="@string/addingPicture" />


</androidx.constraintlayout.widget.ConstraintLayout>