<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/intermediateBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue">

    <Button
        android:id="@+id/browse"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/peach"
        android:text="@string/browse"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/new_ad"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/peach"
        android:text="@string/newAd"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/my_ads"
        android:layout_width="160dp"
        android:layout_height="53dp"
        android:backgroundTint="@color/peach"
        android:text="@string/myAds"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.688"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/logout"
        android:layout_width="154dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/peach"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>