<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:background="@color/peach"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="305dp"
        android:layout_height="233dp"
        android:contentDescription="@string/imageDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        app:srcCompat="@drawable/paw"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="405dp"
        android:layout_height="61dp"
        android:fontFamily="@font/fairy"
        android:labelFor="@id/appName"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071" />

    <TextView
        android:id="@+id/underline"
        android:layout_width="404dp"
        android:layout_height="48dp"
        android:fontFamily="@font/fairy"
        android:labelFor="@id/appName"
        android:text="@string/underline"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="404dp"
        android:layout_height="99dp"
        android:fontFamily="@font/hang"
        android:labelFor="@id/appName"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.208" />

</androidx.constraintlayout.widget.ConstraintLayout>