<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/browseBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/babyblue"
    android:theme="@style/Theme.NoActionBar">

    <Button
        android:id="@+id/browseBackButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/peach"
        android:text="@string/backButton"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/petsTitle"
        android:layout_width="355dp"
        android:layout_height="106dp"
        android:fontFamily="@font/hang"
        android:text="@string/browsePetsTitle"
        android:textAlignment="center"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="192dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_browse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingBottom="180dp"
            android:visibility="visible"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="414dp"
        android:layout_height="57dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="129dp"
        android:layout_marginBottom="546dp"
        android:background="@color/peach"

        android:minHeight="?attr/actionBarSize"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner_browse"
        android:layout_width="196dp"
        android:layout_height="58dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="557dp"
        android:hint="@string/filter_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>